data/all_generated_tests/raw_wast_tests/unreachable_ImproperFunctionCallorReturnHandling_1500.wast
;; 1. **Test Description:**    - A function contains an `unreachable` instruction followed by a `call` to another function that returns a value. The test checks if the call is correctly ignored due to the `unreachable` trapping.    - **Constraint:** Ensures that control flow is interrupted before reaching the function call.    - **Improper Function Call or Return Handling:** Verifies that the `unreachable` instruction properly traps before the function call is executed.

(assert_invalid
  (module
    (func $type-unreachable-before-call 
      (unreachable) (call $some_function)
    )
    (func $some_function (result i32)
      (i32.const 42)
    )
  )
  "type mismatch"
)